# fastapi-brands

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: __init__.py  brands.py  dependencies.py  users.py
src/lib/: cache.py  database.py  exceptions.py  repository.py  sentry.py  settings.py  ssh.py  user.py
src/models/: brands.py  users.py
src/repositories/: brands.py
src/repositories/abstract/: brands.py
src/schemas/: brands.py
src/services/: brands.py  unitofwork.py
src/static/css/: style.css
src/static/js/: app.js
src/templates/: hello.html
src/templates/components/: login.html  settings.html  table.html
